--- a/index.html
+++ b/index.html
@@ -117,6 +117,52 @@
 
     </main>
 
+    <section class="content">
+<p>How to start the Zuir x i4g Training</p>
+
+<div class="cards">
+
+    <!-- card 1 -->
+<div class="card-section">
+    <div class="card">
+        <div class="icon">
+<img src="assets/images/user.png" alt="Users">
+        </div>
+        <div class="card-body">
+            <h4>Register andcreate your account</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ipsa vitae tempore reprehenderit quae corporis!</p>
+        </div>
+    </div>
+
+       <!-- card 2 -->
+
+       <div class="card">
+        <div class="icon">
+<img src="assets/images/home.png" alt="Users">
+        </div>
+        <div class="card-body">
+            <h4>Register andcreate your account</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ipsa vitae tempore reprehenderit quae corporis!</p>
+        </div>
+    </div>
+
+       <!-- card 3 -->
+
+       <div class="card">
+        <div class="icon">
+<img src="assets/images/dir.png" alt="Users">
+        </div>
+        <div class="card-body">
+            <h4>Register andcreate your account</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ipsa vitae tempore reprehenderit quae corporis!</p>
+        </div>
+    </div>
+</div>
+
+</div>
+        
+    </section>
+
     <!-- Js Script -->
 
     <script src="assets/js/app.js"></script>
