initial changes to the scrolling card, for desktop and for mobile

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 <img src="assets/images/user.png" alt="Users">
         </div>
         <div class="card-body">
-            <h4>Register andcreate your account</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ipsa vitae tempore reprehenderit quae corporis!</p>
+            <h4>Register and create your account</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br/> ipsa vitae tempore reprehenderit quae corporis!</p>
         </div>
     </div>
 
@@ -141,8 +141,8 @@
 <img src="assets/images/home.png" alt="Users">
         </div>
         <div class="card-body">
-            <h4>Register andcreate your account</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ipsa vitae tempore reprehenderit quae corporis!</p>
+            <h4>Register and create your account</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br/> ipsa vitae tempore reprehenderit quae corporis!</p>
         </div>
     </div>
 
@@ -153,8 +153,8 @@
 <img src="assets/images/dir.png" alt="Users">
         </div>
         <div class="card-body">
-            <h4>Register andcreate your account</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ipsa vitae tempore reprehenderit quae corporis!</p>
+            <h4>Register and create your account</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br/> ipsa vitae tempore reprehenderit quae corporis!</p>
         </div>
     </div>
 </div>
