An edition push to git for form changes and animation slide

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </div>
 
 <div class="right">
-    <form action="" data-aos="fade-left" data-aos-duration="1000">
+    <form action="" data-aos="fade-right" data-aos-duration="1000">
         <div class="form-header">
             <p>Want to become a Pro in tech?</p>
         </div>
