Animating push forth

--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
 <ul class="navbar-nav">
 
     <li class="nav-item">
-        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link active" href="#" data-aos="fade-up" data-aos-duration="1000">Home</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Learner</a>
+        <a class="nav-link" href="#" data-aos="fade-up" data-aos-duration="1000">Learner</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Intermediate</a>
+        <a class="nav-link" href="#" data-aos="fade-up" data-aos-duration="1000">Intermediate</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Mentor</a>
+        <a class="nav-link" href="#" data-aos="fade-up" data-aos-duration="1000">Mentor</a>
       </li>
 
 </ul>
 
-<button class="btn btn-pri btn-nav" type="submit">Login</button>
+<button class="btn btn-pri btn-nav" type="submit" data-aos="fade-down" data-aos-duration="1000">Login</button>
 
 
 </div>
