--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
 
 <ul class="navbar-nav">
 
-    <li class="nav-item">
-        <a class="nav-link active" href="#" data-aos="fade-up" data-aos-duration="1000">Home</a>
+    <li class="nav-item" data-aos="fade-up" data-aos-duration="1000">
+        <a class="nav-link active" href="#">Home</a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="#" data-aos="fade-up" data-aos-duration="1000">Learner</a>
+      <li class="nav-item" data-aos="fade-up" data-aos-duration="1000">
+        <a class="nav-link" href="#">Learner</a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="#" data-aos="fade-up" data-aos-duration="1000">Intermediate</a>
+      <li class="nav-item" data-aos="fade-up" data-aos-duration="1000">
+        <a class="nav-link" href="#">Intermediate</a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="#" data-aos="fade-up" data-aos-duration="1000">Mentor</a>
+      <li class="nav-item" data-aos="fade-up" data-aos-duration="1000">
+        <a class="nav-link" href="#">Mentor</a>
       </li>
 
 </ul>
