--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
 <ul class="navbar-nav">
 
-    <li class="nav-item" data-aos="fade-up" data-aos-duration="1000">
+    <li class="nav-item" data-aos="fade-right" data-aos-duration="1000">
         <a class="nav-link active" href="#">Home</a>
       </li>
 
-      <li class="nav-item" data-aos="fade-up" data-aos-duration="1000">
+      <li class="nav-item" data-aos="fade-down" data-aos-duration="1000">
         <a class="nav-link" href="#">Learner</a>
       </li>
 
@@ -54,7 +54,7 @@
         <a class="nav-link" href="#">Intermediate</a>
       </li>
 
-      <li class="nav-item" data-aos="fade-up" data-aos-duration="1000">
+      <li class="nav-item" data-aos="fade-down" data-aos-duration="1000">
         <a class="nav-link" href="#">Mentor</a>
       </li>
 
