--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </ul>
 
-<button class="btn btn-pri btn-nav" type="submit" data-aos="fade-down" data-aos-duration="1000">Login</button>
+<button class="btn btn-pri btn-nav" type="submit" data-aos="fade-up" data-aos-duration="1000">Login</button>
 
 
 </div>
